<!--
  ~ Copyright 2015 Niek Haarman
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Triad Sample</string>

  <string name="create_note">Create note</string>

  <string name="title">Title</string>
  <string name="contents">Contents</string>
  <string name="save">Save</string>
  <string name="error_title">Please enter a valid title</string>
  <string name="error_contents">Please enter a valid note</string>
</resources>
