<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Niek Haarman
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.nhaarman.triad.sample.notes.NotesView
  android:id="@+id/view_notes"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20dp">

  <Button
    android:id="@+id/view_notes_createnotebutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:text="@string/create_note" />

  <com.nhaarman.triad.sample.notes.noteslist.NotesListView
    android:id="@+id/view_notes_noteslistview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/view_notes_createnotebutton" />


</com.nhaarman.triad.sample.notes.NotesView>